--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                             <span><i class="fab fa-css3-alt"></i> CSS</span>
                             <span><i class="fab fa-js-square"></i> JavaScript</span>
                             <span><i class="fab fa-bootstrap"></i> Bootstrap</span>
-                             <span><i class="fas fa-mobile-alt"></i> Flutter</span>
                         </div>
                     </div>
                     <!-- Backend -->
@@ -77,8 +76,8 @@
                             <span><i class="fab fa-python"></i> Python</span>
                             <span><i class="fas fa-code"></i> Flask</span>
                             <span><i class="fas fa-database"></i> MySQL</span>
+			    <span><i class="fas fa-database"></i> MySQL3</span>
                             <span><i class="fas fa-database"></i> MongoDB</span>
-                            <span><i class="fas fa-fire"></i> Firebase</span>
                         </div>
                     </div>
                      <!-- DevOps -->
@@ -88,7 +87,6 @@
                            <span><i class="fab fa-aws"></i> AWS</span>
                            <span><i class="fab fa-google"></i> Google Cloud</span>
                            <span><i class="fab fa-docker"></i> Docker</span>
-                           <span><i class="fas fa-dharmachakra"></i> Kubernetes</span>
                         </div>
                     </div>
                     <!-- Android -->
@@ -114,10 +112,8 @@
                          <div class="skill-list">
                              <span><i class="fab fa-git-alt"></i> Git</span>
                              <span><i class="fab fa-github"></i> GitHub</span>
-                             <span><i class="fas fa-cloud"></i> Netlify</span>
                              <span><i class="fas fa-code"></i> VS Code</span>
                              <span><i class="fas fa-rocket"></i> Postman</span>
-                             <span><i class="fas fa-palette"></i> Adobe XD</span>
                              <span><i class="fab fa-figma"></i> Figma</span>
                         </div>
                     </div>
