--- a/index.html
+++ b/index.html
@@ -215,31 +215,31 @@
                     </div>
         </section>
 
-        <!-- Education Section -->
-<section id="education" class="education-section">
+        <!-- Contact Section -->
+<section id="contact" class="contact-section">
   <div class="container">
-    <h2>Education</h2>
-    <p class="section-subtitle">My academic journey and achievements.</p>
+    <div class="contact-wrapper">
+      <div class="contact-info">
+        <h2>Contact Information</h2>
+        <p><strong>Email:</strong> aishwaryapatil22@gmail.com</p>
+        <p><strong>WhatsApp:</strong> +91 9876543210</p>
 
-    <div class="education-item">
-      <h3>B.Tech in Electronics and Communication Engineering</h3>
-      <h4>Shree Siddheshwar Women's College of Engineering (SSWCOE)</h4>
-      <p class="education-duration">2024 – 2027</p>
+        <h3>Connect with me</h3>
+        <p>Looking to hire a Full Stack Developer, Web Developer, or Tech Speaker? I'm available for freelance, remote, and full-time opportunities. Whether you need help with a technical talk or growing your dev team — let’s connect!</p>
 
-      <ul class="education-details">
-        <li><strong>CGPA:</strong> 8.7/10 (Till Date)</li>
-        <li><strong>Achievements:</strong>
-          <ul>
-            <li>Microsoft Learn Student Ambassador (MLSA)</li>
-            <li>AWS Cloud Foundation Certified</li>
-            <li>Winner – Poster Presentation Competition on “AI in Healthcare”</li>
-            <li>Speaker – Technical Session on Web Application Hacking</li>
-          </ul>
-        </li>
-        <li><strong>Technical Skills:</strong> Python, HTML/CSS/JS, Git, Linux, AI Tools</li>
-        <li><strong>Relevant Coursework:</strong> Data Structures, Computer Networks, Digital Electronics, Cloud Computing, Cybersecurity</li>
-        <li><strong>Extra-Curriculars:</strong> Organized tech events, led peer mentoring sessions, active contributor to college magazine</li>
-      </ul>
+        <a href="Aishwarya_Patil_Resume.pdf" class="download-resume" download>Download Resume</a>
+      </div>
+
+      <div class="contact-form">
+        <h2>Let's Talk</h2>
+        <p>Whether you're building a new project or improving an existing one — drop me a message!</p>
+        <form>
+          <input type="text" placeholder="Full Name" required>
+          <input type="email" placeholder="Email" required>
+          <textarea placeholder="Your message..." required></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
     </div>
   </div>
 </section>
