--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="contact-wrapper">
       <div class="contact-info">
         <h2>Contact Information</h2>
-        <p><strong>Email:</strong> aishwaryapatil22@gmail.com</p>
+        <p><strong>Email:</strong> aishpatil330@gmail.com</p>
 
         <h3>Connect with me</h3>
         <p>Looking to hire a Full Stack Developer, Web Developer, or Tech Speaker? I'm available for freelance, remote, and full-time opportunities. Whether you need help with a technical talk or growing your dev team — let’s connect!</p>
